# accordion-simulator

./: .pre-commit-config.yaml  core.py  main.py  pyproject.toml  simulator.py
accordion_simulator/: cli.py  core.py  simulator.py
cg_simulator/: cli.py  core.py  simulator.py
cg_simulator/accordion/: core.py  simulator.py
cg_simulator/once_in_a_lifetime/: core.py
