[tool.poetry]
name = "casino-solitaire-variation-simulation"
version = "0.1.0"
description = "A solitare like game that was supposedly used by casinos."
authors = ["raymonddevries <raymond.l.devries@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.2"
dask = {extras = ["distributed"], version = "^2021.4.1"}
rich = "^10.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
