[tool.poetry]
name = "accordion-simulator"
version = "0.1.0"
description = "A simulator for the game accordion."
authors = ["raymonddevries <raymond.l.devries@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
accordion = "accordion_simulator.cli:simulate"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.2"
dask = {extras = ["distributed"], version = "^2021.4.1"}
rich = "^10.1.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
